--- a/ReadMe
+++ b/ReadMe
@@ -5,3 +5,13 @@ To limit Corona Virus spread, social distancing and observing hygiene standards 
 Many Organizations are making it compulsory to follow social distancing and wearing of face mask.
 This program will help you to detect facial mask monitoring using OpenCV and Python.
 
+
+
+
+How Haar Cascade Classifier Works:
+
+https://towardsdatascience.com/face-detection-with-haar-cascade-727f68dafd08
+
+
+
+
